--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,6 @@ artifactory_contextUrl=https://gtie-artifactory.us.dell.com/artifactory
 buildInfo.licenseControl.runChecks=true
 buildInfo.licenseControl.autoDiscover=true
 buildInfo.build.name=com.dell.isg.smi:service-virtualnetwork
-systemProp.sonar.host.url=http://100.68.126.201:9000
+systemProp.sonar.host.url=https://sonarqube.com
+systemProp.sonar.organization=rackhd-smi
+systemProp.sonar.login=179c476c94a2b24974921a61160d2ecafd298941
