--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
+apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'java'
 apply plugin: 'org.sonarqube'
 apply plugin: 'nebula.rpm'
 apply plugin: 'nebula.deb'
@@ -79,7 +79,7 @@ jar {
 repositories {
 	mavenLocal()
 	maven {
-		url "${artifactory_contextUrl}/libs-release"
+	    url "${artifactory_contextUrl}/${dependency_repo}"
 	}
 }
 
@@ -101,14 +101,17 @@ configurations {
 
 dependencies {
 	//compile project(':virtualnetwork')
-    compile 'com.dell.isg.smi:commons-elm:1.0.36'
-    compile 'com.dell.isg.smi:virtualnetwork:1.0.79'
+	compile 'com.dell.isg.smi:commons-elm:1.0.76'
+	compile 'com.dell.isg.smi:commons-utilities:1.0.26'
+    compile 'com.dell.isg.smi:virtualnetwork:1.0.89'
 
 	compile "org.springframework.boot:spring-boot-starter-web"
 	compile "org.springframework.boot:spring-boot-starter-tomcat"
     compile "org.springframework.boot:spring-boot-starter-actuator"
 	compile "org.springframework.boot:spring-boot-starter-security"
+	
 	compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.0.Final'
 
 	compile "org.springframework.cloud:spring-cloud-starter-consul-all"
 
