changing to force build of .classpath, for use in building dependency sources zip

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ def _url = 'http://support.dell.com'
 def _arch = 'x86_64'
 def _os = 'LINUX'
 def _release = 1
+def _sourcePaths=[]
 
 sourceCompatibility = 1.8
 version = "${version}"
@@ -291,34 +292,48 @@ task sourceJar(type: Jar) {
 }
 
 eclipse {
+    project{
+    	buildCommand 'org.eclipse.buildship.core.gradleprojectbuilder'
+    		
+		// assign natures in a groovy fashion:
+		natures = ['org.eclipse.buildship.core.gradleprojectnature']
+    }
+    
     classpath {
        downloadSources=true
     }
 }
 
-task dependencyZip(type: Zip) {
+
+task buildSourcePathsArray(dependsOn: 'eclipseClasspath' ){
+	doLast{
+		def classpathFile = file('.classpath')
+		if( classpathFile.exists() ) {
+			def cpXml = new XmlParser().parse(classpathFile)
+			cpXml.classpathentry.each {
+				if('lib' == it.@kind ) {
+					if( it.@sourcepath == null ){
+						println 'missing source jar for:' + it.@path
+					}
+					else{
+					 	_sourcePaths.add(it.@sourcepath)
+					}
+				}
+			}
+		}
+		 
+		def arrayLength = _sourcePaths.size()
+		println 'sourcePaths length is:' + arrayLength
+	}
+}
+
+
+task dependencySourcesZip(type: Zip, dependsOn: 'buildSourcePathsArray' ) {
 	destinationDir = project.file('build/distributions')
 	destinationDir.mkdirs()
 	baseName = "smi-service-virutalnetwork-dependency-sources"
 	outputs.upToDateWhen { false }
-	
-    def classpathFile = file('.classpath')
-    def cpXml = new XmlParser().parse(classpathFile)
-    def sourcePaths=[]
-    cpXml.classpathentry.each {
-        if('lib' == it.@kind ) {
-            if( it.@sourcepath == null ){
-               println 'missing source jar for:' + it.@path
-            }
-            else{
-              sourcePaths.add(it.@sourcepath)
-            }
-        }
-     }
-     
-     def arrayLength = sourcePaths.size()
-     println 'sourcePaths length is:' + arrayLength
-    
-    from sourcePaths
+ 
+    from _sourcePaths
 }
 
