--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 version=1.0
+dockerTag=devel
 artifactory_contextUrl=https://gtie-artifactory.us.dell.com/artifactory
 dependency_repo=libs-release
 buildInfo.licenseControl.runChecks=true
