--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'org.sonarqube'
 apply plugin: 'nebula.rpm'
 apply plugin: 'nebula.deb'
 apply plugin: "com.github.hierynomus.license"
+apply plugin: 'org.asciidoctor.convert'
+apply plugin: 'com.jfrog.bintray'
 //apply plugin: 'nebula.lint'
 
 def _vendor = 'Dell'
@@ -16,11 +18,31 @@ def _arch = 'x86_64'
 def _os = 'LINUX'
 def _release = 1
 def _sourcePaths=[]
+def apiVersion = ''
+
+def getCurrentTimestamp(){
+  new Date().format("MM-dd-yyyy_hh-mm")
+}
+
+def updateVersionProperties() {
+    def buildInfoFile = file('src/main/resources/buildInfo.properties')
+    String buildInfoProp = buildInfoFile.getText('UTF-8')
+    println "updating version to '${version}' in ${buildInfoFile}"
+    buildInfoProp = buildInfoProp.replaceAll(/buildInfo\.version=.*/, "buildInfo.version=${version}")
+    buildInfoFile.write(buildInfoProp, 'UTF-8')
+    println "updating docker tag to '${dockerTag}' in ${buildInfoFile}"
+    buildInfoProp = buildInfoProp.replaceAll(/buildInfo\.tag=.*/, "buildInfo.tag=${dockerTag}")
+    buildInfoFile.write(buildInfoProp, 'UTF-8')
+    println "updating build date to '${getCurrentTimestamp()}' in ${buildInfoFile}"
+    buildInfoProp = buildInfoProp.replaceAll(/buildInfo\.date=.*/, "buildInfo.date=${getCurrentTimestamp()}")
+    buildInfoFile.write(buildInfoProp, 'UTF-8')
+}
 
 sourceCompatibility = 1.8
 version = "${version}"
 dockerTag = "${dockerTag}"
 group = 'com.dell.isg.smi'
+apiVersion = 'api-'+"${version}"
 
 //check.dependsOn integrationTest
 //integrationTest.mustRunAfter test
@@ -30,11 +52,12 @@ buildscript {
 		springVersion = '4.3.6.RELEASE'
     	springBootVersion = '1.5.1.RELEASE'
     	springCloudVersion = 'Camden.SR5'
+    	generatedAsciidoc = file("${buildDir}/docs/apidocs/asciidoc/generated")
 	}
    repositories {
     mavenLocal()
+    mavenCentral()
 	maven {
-		url "${artifactory_contextUrl}/libs-release"
 		url "https://plugins.gradle.org/m2/"
 
 	}
@@ -46,6 +69,9 @@ buildscript {
 	classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.2.1"
 	classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.13.1"
 	//classpath 'com.netflix.nebula:gradle-lint-plugin:latest.release'
+	classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.3'
+    classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.15'
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
   }
 }
 
@@ -79,9 +105,7 @@ jar {
 }
 
 repositories {
-	maven {
-	    url "${artifactory_contextUrl}/${dependency_repo}"
-	}
+	mavenCentral()
     mavenLocal()
 }
 
@@ -99,6 +123,10 @@ sourceSets {
 configurations {
     integrationTestCompile.extendsFrom testCompile
     integrationTestRuntime.extendsFrom testRuntime
+}
+
+allprojects {
+    updateVersionProperties()
 }
 
 dependencies {
@@ -122,14 +150,19 @@ dependencies {
     compile "org.apache.commons:commons-lang3:3.5"
     compile "org.postgresql:postgresql:9.4.1212"
 
-    compile "io.springfox:springfox-swagger2:2.6.1"
-	compile "io.springfox:springfox-swagger-ui:2.6.1"
-
-	//test dependencies
-	testCompile("org.springframework.boot:spring-boot-starter-test")
-	testCompile group: 'io.github.robwin', name: 'swagger2markup', version: '0.2.2'
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.6.1'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.6.1'
+	testCompile group: 'io.springfox', name:'springfox-staticdocs', version: '2.6.1'
+	testCompile group: 'junit', name: 'junit', version: '4.12'
+	testCompile 'org.springframework.boot:spring-boot-starter-test'
+	testCompile group: 'com.h2database', name: 'h2', version: '1.4.196'
 	integrationTestCompile("org.springframework.boot:spring-boot-test-autoconfigure")
 	integrationTestCompile 'org.assertj:assertj-core:3.0.0'
+}
+
+test {
+    systemProperties 'property': 'value'
+    systemProperty 'staticdocs.outputDir', generatedAsciidoc
 }
 
 tasks.withType(Test) {
@@ -339,3 +372,48 @@ task dependencySourcesZip(type: Zip, dependsOn: 'buildSourcePathsArray' ) {
     from _sourcePaths
 }
 
+asciidoctor {
+    dependsOn test
+    sources {
+        include 'api-*.adoc'
+    }
+    backends = ['pdf']
+    attributes = [
+        doctype: 'book',
+        toc: 'left',
+        toclevels: '2',
+        numbered: '',
+        sectlinks: '',
+        sectanchors: '',
+        hardbreaks: '',
+        generated: generatedAsciidoc
+    ]
+}
+
+bintrayUpload.dependsOn asciidoctor
+
+bintray {
+	user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+	key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    filesSpec {
+       from file(asciidoctor.outputDir.path + '/pdf')
+       into '.'
+    }
+    dryRun = false
+    publish = true
+    override = false
+    pkg {
+		repo = "${bintrayRepo}"
+		name = apiVersion
+		userOrg = "${bintrayUserOrg}"
+		desc = 'Swagger API for Virtual Network Service.'
+		licenses = ['Apache-2.0']
+		vcsUrl = "${bintrayVcsUrl}"
+		publicDownloadNumbers = true
+		version {
+			name = apiVersion
+			desc = 'apidoc'
+			vcsTag = 'master'
+		}
+	}
+}
