--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,14 @@
 version=1.0
 dockerTag=devel
-artifactory_contextUrl=https://gtie-artifactory.us.dell.com/artifactory
 dependency_repo=libs-release
 buildInfo.licenseControl.runChecks=true
 buildInfo.licenseControl.autoDiscover=true
 buildInfo.build.name=com.dell.isg.smi:service-virtualnetwork
-#systemProp.sonar.host.url=http://100.68.126.201:9000
 systemProp.sonar.host.url=https://sonarqube.com
 systemProp.sonar.organization=rackhd-smi
 systemProp.sonar.login=##sonarqubeLogin-placeholder##
+bintrayRepo=docs
+bintrayUserOrg=rackhd
+bintrayVcsUrl=https://bintray.com/rackhd/docs/apidoc
+bintrayUser=##bintray-user-placeholder##
+bintrayApiKey=##bintray-api-key-placeholder##
