--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,6 @@ buildInfo.build.name=com.dell.isg.smi:service-virtualnetwork
 systemProp.sonar.host.url=https://sonarqube.com
 systemProp.sonar.organization=rackhd-smi
 systemProp.sonar.login=##sonarqubeLogin-placeholder##
+commonsElmVersion=1.0.82
+commonsUilitiesVersion=1.0.32
+virtualnetworkVersion=1.0.89
